# search-rs

./: Cargo.toml  README.md  build.rs
proto/: searchindex.proto
src/: client.rs  main.rs  postgres.rs  search_index.rs  utils.rs
src/server/: main.rs  statements.rs  utils.rs
