[package]
name = "search-rs"
version = "0.1.0"
authors = ["Martí Angelats i Ribera <marti.angelats@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
bytes = "0.4"
futures = { version = "0.3", default-features = false}
futures-util = { version = "0.3", default-features = false}
prost = "0.6"
prost-derive = "0.5"
tokio = { version = "0.2", features = ["rt-threaded", "stream", "macros"] }
tokio-postgres = "0.5.0-alpha.2"
tonic = "0.1.1"

[build-dependencies]
tonic-build = "0.1.1"

[profile.release]
opt-level = 3
lto = true
